--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 
 <head>
-    <!-- Global head -->
+    <!-- ▼ Global head ▼ -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,18 +11,22 @@
 
     <meta property="og:site_name" content="Sarf Esports">
     <!-- TODO: Input the absolute path of the favicon ↓↓-->
-    <meta property="og:image" content="/assets/img/logos/sarf_large.png">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/Rinrin0413/sarfesports-website.dev/master/assets/images/logos/sarf_large.png?token=GHSAT0AAAAAABV3ILFPV7XLWBLYXACMWPVGYZ7JA4Q">
     <meta property="og:locale" content="ja_JP">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content=""> <!-- TODO: Input the link to index  -->
-    <meta name="theme-color" content="#191919">
+    <meta name="theme-color" content="#83ebff">
 
     <meta name="keywords" content="sarf">
     <meta name="author" content="Rinrin.rs">
     <meta name="copyright" content="© 2022 Sarf Esports All rights reserved">
 
-    <!-- Local head -->
-    <link rel="icon" href="./assets/img/logos/sarf.png">
+    <!-- ▲ Global head ▲ -->
+
+    <!-- ▼ Local head ▼ -->
+
+    <link rel="icon" href="./assets/images/logos/sarf.png">
     <title>Sarf Esports</title>
     <meta name="title" content="Sarf Esports">
     <meta name="description" content="Sarf Esports の公式サイトです。">
@@ -31,8 +36,21 @@
     <meta property="og:url" content=""> <!-- TODO: Input the URL of this page -->
     <!-- website or article -->
     <meta property="og:type" content="website">
-    <link rel="stylesheet" href="./assets/stylesheet/style.css">
-    <link rel="stylesheet" href="./assets/stylesheet/util.css">
+    <link rel="stylesheet" href="./assets/stylesheets/style.css">
+    <link rel="stylesheet" href="./assets/stylesheets/util.css">
+    <script src="./assets/scripts/script.js"></script>
+    <script>
+        window.onload = function () {
+            let section_title = document.getElementsByClassName("section-title");
+            window.onscroll = () => {
+                for (let i = 0; i < section_title.length; i++) {
+                    if (section_title[i].getBoundingClientRect().top < window.innerHeight) {
+                        section_title[i].firstElementChild.classList.add("fade-in-right")
+                    }
+                }
+            };
+        };
+    </script>
     <style>
         body {
             /* TODO: Set the background image finally ↓↓ */
@@ -130,7 +148,7 @@
 
         .topic-list li span {
             background-color: firebrick;
-            padding: 4px 7px 5px 5px;
+            padding: 0 7px 5px 5px;
             margin-left: 2px;
         }
 
@@ -155,13 +173,15 @@
             pointer-events: none;
         }
     </style>
+
+    <!-- ▲ Local head ▲ -->
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#"><img src="./assets/img/logos/sarf.png" alt="logo"></a></li>
+                <li><a href="#" class="has-img"><img src="./assets/images/logos/sarf.png" alt="logo"></a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#topics">TOPICS</a></li>
                 <li><a href="#title">TITLE</a></li>
@@ -175,7 +195,7 @@
         <div class="container bg-default">
             <section style="margin-top:192px;">
                 <div style="max-width:384px;margin:0 auto;">
-                    <img src="./assets/img/logos/sarf.png" alt="logo" class="no-pointer-events"
+                    <img src="./assets/images/logos/sarf.png" alt="logo" class="no-pointer-events fade-in-bottom"
                         style="width:100%;height:100%;object-fit:cover;">
                 </div>
                 <h1 style="font-size:64px;">Sarf Esports</h1>
@@ -232,9 +252,10 @@
                 </div>
                 <div class="section-content">
                     <ul class="title-list">
-                        <li><img src="./assets/img/logos/fortnite.svg" alt="fortnite" style="width:80%;"></li>
-                        <li><img src="./assets/img/logos/apex.svg" alt="apex" style="width:40%;"></li>
-                        <li><img src="./assets/img/logos/minecraft.svg" alt="minecraft" style="width:90%;margin:8px 0;">
+                        <li><img src="./assets/images/logos/fortnite.svg" alt="fortnite" style="width:80%;"></li>
+                        <li><img src="./assets/images/logos/apex.svg" alt="apex" style="width:40%;"></li>
+                        <li><img src="./assets/images/logos/minecraft.svg" alt="minecraft"
+                                style="width:90%;margin:8px 0;">
                         </li>
                     </ul>
                 </div>
