--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
     <meta property="og:site_name" content="Sarf Esports">
     <!-- TODO: Input the absolute path of the favicon ↓↓-->
-    <meta property="og:image"
-        content="https://raw.githubusercontent.com/Rinrin0413/sarfesports-website.dev/master/assets/images/logos/sarf_large.png?token=GHSAT0AAAAAABV3ILFPV7XLWBLYXACMWPVGYZ7JA4Q">
+    <meta property="og:image" content="-">
     <meta property="og:locale" content="ja_JP">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content=""> <!-- TODO: Input the link to index  -->
@@ -172,6 +171,32 @@
         .title-list li img {
             pointer-events: none;
         }
+
+        .social-bar {
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .social-bar li {
+            margin: 0 16px;
+        }
+
+        .social-bar li a {
+            text-decoration: none;
+            color: white;
+            height: 64px;
+            width: 64px;
+        }
+
+        .social-bar li a div svg {
+            transition: .37s;
+        }
+
+        .social-bar li a div svg:hover {
+            transform: translateY(-6px);
+        }
     </style>
 
     <!-- ▲ Local head ▲ -->
@@ -184,9 +209,9 @@
                 <li><a href="#" class="has-img"><img src="./assets/images/logos/sarf.png" alt="logo"></a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#topics">TOPICS</a></li>
-                <li><a href="#title">TITLE</a></li>
+                <li><a href="#member">MEMBER</a></li>
                 <li><a href="#sponsor">SPONSOR</a></li>
-                <li><a href="">CONTACT</a></li> <!-- TODO: Implement the contact form -->
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -246,9 +271,9 @@
         </div>
 
         <div class="container bg-default">
-            <section id="title">
+            <section id="member">
                 <div class="section-title">
-                    <h1>TITLE</h1>
+                    <h1>MEMBER</h1>
                 </div>
                 <div class="section-content">
                     <ul class="title-list">
@@ -272,6 +297,42 @@
                     <h1>SPONSOR</h1>
                 </div>
                 <div class="section-content">
+                </div>
+            </section>
+        </div>
+
+        <div class="container">
+            <section class="empty-section"></section>
+        </div>
+
+        <div class="container bg-default">
+            <section id="contact">
+                <div class="section-title">
+                    <h1>CONTACT</h1>
+                </div>
+                <div class="section-content">
+                    <ul class="social-bar">
+                        <!-- These SVGs are from https://materialdesignicons.com -->
+                        <li><a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)">
+                                <div><svg style="width:64px;height:64px" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" />
+                                    </svg></div>
+                            </a></li>
+                        <li style="opacity:.3;"><a href="mailto:" title="Mail (Getting Ready)">
+                                <div><svg style="width:64px;height:64px" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z" />
+                                    </svg></div>
+                            </a></li>
+                        <li style="opacity:.3;"><a href="https://www.youtube.com/channel/" target="_blank"
+                                title="YouTube (Getting Ready)">
+                                <div><svg style="width:64px;height:64px" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.5,18.78 17.18,18.84C15.88,18.91 14.69,18.94 13.59,18.94L12,19C7.81,19 5.2,18.84 4.17,18.56C3.27,18.31 2.69,17.73 2.44,16.83C2.31,16.36 2.22,15.73 2.16,14.93C2.09,14.13 2.06,13.44 2.06,12.84L2,12C2,9.81 2.16,8.2 2.44,7.17C2.69,6.27 3.27,5.69 4.17,5.44C4.64,5.31 5.5,5.22 6.82,5.16C8.12,5.09 9.31,5.06 10.41,5.06L12,5C16.19,5 18.8,5.16 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z" />
+                                    </svg></div>
+                            </a></li>
+                    </ul>
                 </div>
             </section>
         </div>
