Impl:contact modal

--- a/index.html
+++ b/index.html
@@ -2,295 +2,307 @@
 <html lang="ja">
 
 <head>
-    <!-- ▼ Global head ▼ -->
+	<!-- ▼ Global head ▼ -->
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="format-detection" content="telephone=no">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="format-detection" content="telephone=no">
 
-    <meta property="og:site_name" content="Sarf Esports">
-    <!-- TODO: Input the absolute path of the favicon ↓↓-->
-    <meta property="og:image" content="-">
-    <meta property="og:locale" content="ja_JP">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content=""> <!-- TODO: Input the link to index  -->
-    <meta name="theme-color" content="#83ebff">
+	<meta property="og:site_name" content="Sarf Esports">
+	<!-- TODO: Input the absolute path of the favicon ↓↓-->
+	<meta property="og:image" content="-">
+	<meta property="og:locale" content="ja_JP">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content=""> <!-- TODO: Input the link to index  -->
+	<meta name="theme-color" content="#83ebff">
 
-    <meta name="keywords" content="sarf">
-    <meta name="author" content="Rinrin.rs">
-    <meta name="copyright" content="© 2022 Sarf Esports All rights reserved">
+	<meta name="keywords" content="sarf">
+	<meta name="author" content="Rinrin.rs">
+	<meta name="copyright" content="© 2022 Sarf Esports All rights reserved">
 
-    <!-- ▲ Global head ▲ -->
+	<!-- ▲ Global head ▲ -->
 
-    <!-- ▼ Local head ▼ -->
+	<!-- ▼ Local head ▼ -->
 
-    <link rel="icon" href="./assets/images/logos/sarf.png">
-    <title>Sarf Esports</title>
-    <meta name="title" content="Sarf Esports">
-    <meta name="description" content="Sarf Esports の公式サイトです。">
+	<link rel="icon" href="./assets/images/logos/sarf.png">
+	<title>Sarf Esports</title>
+	<meta name="title" content="Sarf Esports">
+	<meta name="description" content="Sarf Esports の公式サイトです。">
 
-    <meta property="og:title" content="Sarf Esports">
-    <meta property="og:description" content="Sarf Esports の公式サイトです。">
-    <meta property="og:url" content=""> <!-- TODO: Input the URL of this page -->
-    <!-- website or article -->
-    <meta property="og:type" content="website">
-    <link rel="stylesheet" href="./assets/stylesheets/style.css">
-    <link rel="stylesheet" href="./assets/stylesheets/util.css">
-    <script src="./assets/scripts/script.js"></script>
-    <script>
-        window.onload = function () {
-            let section_title = document.getElementsByClassName("section-title");
-            window.onscroll = () => {
-                for (let i = 0; i < section_title.length; i++) {
-                    if (section_title[i].getBoundingClientRect().top < window.innerHeight) {
-                        section_title[i].firstElementChild.classList.add("fade-in-right")
-                    }
-                }
-            };
-        };
-    </script>
-    <style>
-        body {
-            /* TODO: Set the background image finally ↓↓ */
-            background-image: url(https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png);
-            background-attachment: fixed;
-            background-size: cover;
-        }
+	<meta property="og:title" content="Sarf Esports">
+	<meta property="og:description" content="Sarf Esports の公式サイトです。">
+	<meta property="og:url" content=""> <!-- TODO: Input the URL of this page -->
+	<!-- website or article -->
+	<meta property="og:type" content="website">
+	<link rel="stylesheet" href="./assets/stylesheets/style.css">
+	<link rel="stylesheet" href="./assets/stylesheets/util.css">
+	<script src="./assets/scripts/script.js"></script>
+	<script>
+		window.onload = function () {
+			let section_title = document.getElementsByClassName("section-title");
+			window.onscroll = () => {
+				for (let i = 0; i < section_title.length; i++) {
+					if (section_title[i].getBoundingClientRect().top < window.innerHeight) {
+						section_title[i].firstElementChild.classList.add("fade-in-right")
+					}
+				}
+			};
+		};
+	</script>
+	<style>
+		body {
+			/* TODO: Set the background image finally ↓↓ */
+			background-image: url(https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png);
+			background-attachment: fixed;
+			background-size: cover;
+		}
 
-        .continer {
-            width: 100%;
-        }
+		.continer {
+			width: 100%;
+		}
 
-        .container::before {
-            content: "";
-            display: block;
-            padding-top: 64px;
-        }
+		.container::before {
+			content: "";
+			display: block;
+			padding-top: 64px;
+		}
 
-        .container::after {
-            content: "";
-            display: block;
-            border-bottom: 2px solid white;
-            padding-top: 86px;
-        }
+		.container::after {
+			content: "";
+			display: block;
+			border-bottom: 2px solid white;
+			padding-top: 86px;
+		}
 
-        section {
-            max-width: 768px;
-            margin: 0 auto;
-        }
+		section {
+			max-width: 768px;
+			margin: 0 auto;
+		}
 
-        .dropdown-btn {
-            text-decoration: none;
-            color: white;
-            padding: 1rem 1.25rem;
-            display: inline-block;
-            margin: 16px auto 32px auto;
-            font-size: 24px;
-            transition: .4s;
-        }
+		.dropdown-btn {
+			text-decoration: none;
+			color: white;
+			padding: 1rem 1.25rem;
+			display: inline-block;
+			margin: 16px auto 32px auto;
+			font-size: 24px;
+			transition: .4s;
+		}
 
-        .dropdown-btn:hover {
-            transform: translateY(4px);
-            color: white;
-        }
+		.dropdown-btn:hover {
+			transform: translateY(4px);
+			color: white;
+		}
 
-        .section-title {
-            text-align: left;
-        }
+		.section-title {
+			text-align: left;
+		}
 
-        .section-title h1 {
-            font-size: 40px;
-            border-bottom: 2px solid white;
-            display: inline-block;
-            padding-right: 32px;
-        }
+		.section-title h1 {
+			font-size: 40px;
+			border-bottom: 2px solid white;
+			display: inline-block;
+			padding-right: 32px;
+		}
 
-        .section-content {
-            margin: 16px 0;
-        }
+		.section-content {
+			margin: 16px 0;
+		}
 
-        .section-content p {
-            text-align: left;
-            max-width: 576px;
-            font-size: 22px;
-            margin: 0 auto;
-            font-weight: 1;
-            letter-spacing: .075em;
-            line-height: 1.5;
-        }
+		.section-content p {
+			text-align: left;
+			max-width: 576px;
+			font-size: 22px;
+			margin: 0 auto;
+			font-weight: 1;
+			letter-spacing: .075em;
+			line-height: 1.5;
+		}
 
-        .empty-section {
-            height: 4vw;
-        }
+		.empty-section {
+			height: 4vw;
+		}
 
-        .topic-list {
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-        }
+		.topic-list {
+			list-style: none;
+			display: flex;
+			flex-wrap: wrap;
+		}
 
-        .topic-list li {
-            text-align: left;
-            background-color: #101010;
-            padding: 12px 32px 4px 8px;
-            border-left: #83ebff 5px solid;
-            margin: 7px;
-            border-radius: 0 4px 4px 0;
-        }
+		.topic-list li {
+			text-align: left;
+			background-color: #101010;
+			padding: 12px 32px 4px 8px;
+			border-left: #83ebff 5px solid;
+			margin: 7px;
+			border-radius: 0 4px 4px 0;
+		}
 
-        .topic-list li h2 {
-            font-size: 24px;
-            margin-left: 5px;
-            letter-spacing: .06em;
-        }
+		.topic-list li h2 {
+			font-size: 24px;
+			margin-left: 5px;
+			letter-spacing: .06em;
+		}
 
-        .topic-list li span {
-            background-color: firebrick;
-            padding: 0 7px 5px 5px;
-            margin-left: 2px;
-        }
+		.topic-list li span {
+			background-color: firebrick;
+			padding: 0 7px 5px 5px;
+			margin-left: 2px;
+		}
 
-        .title-list {
-            list-style: none;
-        }
+		.title-list {
+			list-style: none;
+		}
 
-        .title-list li {
-            border: #dae6f3 5px solid;
-            border-radius: 3px;
-            padding: 16px 0;
-            width: 64%;
-            margin: 0 auto 24px auto;
-            transition: .4s ease-out;
-        }
+		.title-list li {
+			border: #dae6f3 5px solid;
+			border-radius: 3px;
+			padding: 16px 0;
+			width: 64%;
+			margin: 0 auto 24px auto;
+			transition: .4s ease-out;
+		}
 
-        .title-list li:hover {
-            transform: scale(1.34);
-        }
+		.title-list li:hover {
+			transform: scale(1.34);
+		}
 
-        .title-list li img {
-            pointer-events: none;
-        }
-    </style>
+		.title-list li img {
+			pointer-events: none;
+		}
+	</style>
 
-    <!-- ▲ Local head ▲ -->
+	<!-- ▲ Local head ▲ -->
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#" class="has-img"><img src="./assets/images/logos/sarf.png" alt="logo"></a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#topics">TOPICS</a></li>
-                <li><a href="#member">MEMBER</a></li>
-                <li><a href="#sponsor">SPONSOR</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
-        </nav>
-    </header>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#" class="has-img"><img src="./assets/images/logos/sarf.png" alt="logo"></a></li>
+				<li><a href="#about">ABOUT</a></li>
+				<li><a href="#topics">TOPICS</a></li>
+				<li><a href="#member">MEMBER</a></li>
+				<li><a href="#sponsor">SPONSOR</a></li>
+				<li><a href="javascript:show_contact_modal()">CONTACT</a></li>
+			</ul>
+		</nav>
+	</header>
 
-    <main>
-        <div class="container bg-default">
-            <section style="margin-top:192px;">
-                <div style="max-width:384px;margin:0 auto;">
-                    <img src="./assets/images/logos/sarf.png" alt="logo" class="no-pointer-events fade-in-bottom"
-                        style="width:100%;height:100%;object-fit:cover;">
-                </div>
-                <h1 style="font-size:64px;">Sarf Esports</h1>
-                <a href="#about" class="dropdown-btn">▼</a>
-            </section>
-        </div>
+	<main>
+		<div class="container bg-default">
+			<section style="margin-top:192px;">
+				<div style="max-width:384px;margin:0 auto;">
+					<img src="./assets/images/logos/sarf.png" alt="logo" class="no-pointer-events fade-in-bottom"
+						style="width:100%;height:100%;object-fit:cover;">
+				</div>
+				<h1 style="font-size:64px;">Sarf Esports</h1>
+				<a href="#about" class="dropdown-btn">▼</a>
+			</section>
+		</div>
 
-        <div class="container bg-default">
-            <section id="about">
-                <div class="section-title">
-                    <h1>ABOUT</h1>
-                </div>
-                <div class="section-content">
-                    <p>
-                        2022年に設立された大阪を拠点としているアマチュアEスポーツチームです。
-                        現在「Fortnite部門」「APEX部門」「Minecraft部門」の3部門で活動しており、
-                        eスポーツの発展を目的として精力的に活動を行っております。
-                    </p>
-                </div>
-            </section>
-        </div>
+		<div class="container bg-default">
+			<section id="about">
+				<div class="section-title">
+					<h1>ABOUT</h1>
+				</div>
+				<div class="section-content">
+					<p>
+						2022年に設立された大阪を拠点としているアマチュアEスポーツチームです。
+						現在「Fortnite部門」「APEX部門」「Minecraft部門」の3部門で活動しており、
+						eスポーツの発展を目的として精力的に活動を行っております。
+					</p>
+				</div>
+			</section>
+		</div>
 
-        <div class="container">
-            <section class="empty-section"></section>
-        </div>
+		<div class="container">
+			<section class="empty-section"></section>
+		</div>
 
-        <div class="container bg-default">
-            <section id="topics">
-                <div class="section-title">
-                    <h1>TOPICS</h1>
-                </div>
-                <div class="section-content">
-                    <ul class="topic-list">
-                        <!-- 
+		<div class="container bg-default">
+			<section id="topics">
+				<div class="section-title">
+					<h1>TOPICS</h1>
+				</div>
+				<div class="section-content">
+					<ul class="topic-list">
+						<!-- 
                             Note: We can add the NEW flag by adding `<span>new</span>` after the date. 
                         -->
-                        <li>
-                            2022/10/10<span>new</span>
-                            <h2>公式サイト開設</h32>
-                        </li>
-                    </ul>
-                </div>
-            </section>
-        </div>
+						<li>
+							2022/10/10<span>new</span>
+							<h2>公式サイト開設</h32>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</div>
 
-        <div class="container">
-            <section class="empty-section"></section>
-        </div>
+		<div class="container">
+			<section class="empty-section"></section>
+		</div>
 
-        <div class="container bg-default">
-            <section id="member">
-                <div class="section-title">
-                    <h1>MEMBER</h1>
-                </div>
-                <div class="section-content">
-                    <ul class="title-list">
-                        <li><img src="./assets/images/logos/fortnite.svg" alt="fortnite" style="width:80%;"></li>
-                        <li><img src="./assets/images/logos/apex.svg" alt="apex" style="width:40%;"></li>
-                        <li><img src="./assets/images/logos/minecraft.svg" alt="minecraft"
-                                style="width:90%;margin:8px 0;">
-                        </li>
-                    </ul>
-                </div>
-            </section>
-        </div>
+		<div class="container bg-default">
+			<section id="member">
+				<div class="section-title">
+					<h1>MEMBER</h1>
+				</div>
+				<div class="section-content">
+					<ul class="title-list">
+						<li><img src="./assets/images/logos/fortnite.svg" alt="fortnite" style="width:80%;"></li>
+						<li><img src="./assets/images/logos/apex.svg" alt="apex" style="width:40%;"></li>
+						<li><img src="./assets/images/logos/minecraft.svg" alt="minecraft"
+								style="width:90%;margin:8px 0;">
+						</li>
+					</ul>
+				</div>
+			</section>
+		</div>
 
-        <div class="container">
-            <section class="empty-section"></section>
-        </div>
+		<div class="container">
+			<section class="empty-section"></section>
+		</div>
 
-        <div class="container bg-default">
-            <section id="sponsor">
-                <div class="section-title">
-                    <h1>SPONSOR</h1>
-                </div>
-                <div class="section-content">
-                </div>
-            </section>
-        </div>
-    </main>
+		<div class="container bg-default">
+			<section id="sponsor">
+				<div class="section-title">
+					<h1>SPONSOR</h1>
+				</div>
+				<div class="section-content">
+				</div>
+			</section>
+		</div>
+	</main>
 
-    <footer>
-        <!-- TODO: Implement the footer -->
-        <p class="copyright">© 2022 Sarf Esports All rights reserved</p>
-    </footer>
+	<footer>
+		<!-- TODO: Implement the footer -->
+		<p class="copyright">© 2022 Sarf Esports All rights reserved</p>
+	</footer>
 
-
-    <a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)" id="twitter">
-        <div>
+	<a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)" id="twitter">
+		<div>
 			<!-- This SVG is from https://materialdesignicons.com -->
 			<svg style="width:64px;height:64px" viewBox="0 0 24 24">
-                <path fill="currentColor"
-                    d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" />
-            </svg>
+				<path fill="currentColor"
+					d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" />
+			</svg>
 		</div>
-    </a>
+	</a>
+
+	<div id="contact-modal" class="hide-contact-modal">
+		<h1>- CONTACT US -</h1>
+		<span class="modal-close-btn" onclick="hide_contact_modal()">&times;</span>
+		<p>
+			<nobr>チームに関するお問い合わせはこちらからお願い致します。</nobr><br>
+			※返答までにお時間をいただく場合がございます。<br>
+			※お答えできない場合がございます。
+		</p>
+		<a href="mailto:" class="mail-btn">
+			メールを送る
+		</a>
+	</div>
 </body>
 <b>
 
