Improve:set og-image / Add:a TODO

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 	<meta property="og:site_name" content="Sarf Esports">
 	<!-- TODO: Input the absolute path of the favicon ↓↓-->
-	<meta property="og:image" content="-">
+	<meta property="og:image"
+		content="https://cdn.discordapp.com/attachments/1027540826697519115/1027668347158007929/sarf_large.png">
 	<meta property="og:locale" content="ja_JP">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content=""> <!-- TODO: Input the link to index  -->
@@ -295,6 +296,7 @@
 			※返答までにお時間をいただく場合がございます。<br>
 			※お答えできない場合がございます。
 		</p>
+		<!-- TODO: Set the mail address -->
 		<a href="mailto:" class="mail-btn">
 			メールを送る
 		</a>
