Update:rewrited MEMBER section Rename:`./assets/images/logos/twitter.png` to `./assets/images/logos/twitter_white.png`

--- a/index.html
+++ b/index.html
@@ -151,27 +151,6 @@
 			padding: 0 7px 5px 5px;
 			margin-left: 2px;
 		}
-
-		.title-list {
-			list-style: none;
-		}
-
-		.title-list li {
-			border: #dae6f3 5px solid;
-			border-radius: 3px;
-			padding: 16px 0;
-			width: 64%;
-			margin: 0 auto 24px auto;
-			transition: .4s ease-out;
-		}
-
-		.title-list li:hover {
-			transform: scale(1.34);
-		}
-
-		.title-list li img {
-			pointer-events: none;
-		}
 	</style>
 
 	<!-- ▲ Local head ▲ -->
@@ -252,15 +231,196 @@
 				</div>
 				<div class="section-content">
 					<ul class="title-list">
-						<li><img src="./assets/images/logos/fortnite.svg" alt="fortnite" style="width:80%;"></li>
-						<li><img src="./assets/images/logos/apex.svg" alt="apex" style="width:40%;"></li>
-						<li><img src="./assets/images/logos/minecraft.svg" alt="minecraft"
-								style="width:90%;margin:8px 0;">
+						<li>
+							<h1 class="game-title">FORTNITE</h1>
+							<ul class="member-list" id="fortnite-member-list">
+								<li>
+									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
+										alt="member icon" class="member-icon">
+									<h2 class="member-name">ムスカ大佐だ</h2>
+									<a href="https://twitter.com/musuka_taisa_dadada" class="member-twitter member-link"
+										target="_blank">
+										<img src="./assets/images/logos/twitter_blue.svg" alt="twitter logo">
+									</a>
+									<a href="httos://youtube.com/muskksudmsukdamdadad"
+										class="member-youtube member-link" target="_blank">
+										<img src="./assets/images/logos/youtube.png" alt="youtube logo">
+									</a>
+									<a href="httos://twitch.tv/musukadmsukdamdadad" class="member-twitch member-link"
+										target="_blank">
+										<img src="./assets/images/logos/twitch.svg" alt="twitch logo">
+									</a>
+								</li>
+								<li>
+									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
+										alt="member icon" class="member-icon">
+									<h2 class="member-name">ムスカ大佐だ</h2>
+									<a href="httos://youtube.com/muskksudmsukdamdadad"
+										class="member-youtube member-link" target="_blank">
+										<img src="./assets/images/logos/youtube.png" alt="youtube logo">
+									</a>
+								</li>
+								<li>
+									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
+										alt="member icon" class="member-icon">
+									<h2 class="member-name">ムスカ大佐だ</h2>
+									<a href="https://twitter.com/musuka_taisa_dadada" class="member-twitter member-link"
+										target="_blank">
+										<img src="./assets/images/logos/twitter_blue.svg" alt="twitter logo">
+									</a>
+									<a href="httos://youtube.com/muskksudmsukdamdadad"
+										class="member-youtube member-link" target="_blank">
+										<img src="./assets/images/logos/youtube.png" alt="youtube logo">
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<h1 class="game-title">APEX</h1>
+							<ul class="member-list" id="fortnite-member-list">
+								<li>
+									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
+										alt="member icon" class="member-icon">
+									<h2 class="member-name">ムスカ大佐だ</h2>
+									<a href="https://twitter.com/musuka_taisa_dadada" class="member-twitter member-link"
+										target="_blank">
+										<img src="./assets/images/logos/twitter_blue.svg" alt="twitter logo">
+									</a>
+									<a href="httos://youtube.com/muskksudmsukdamdadad"
+										class="member-youtube member-link" target="_blank">
+										<img src="./assets/images/logos/youtube.png" alt="youtube logo">
+									</a>
+								</li>
+								<li>
+									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
+										alt="member icon" class="member-icon">
+									<h2 class="member-name">ムスカ大佐だ</h2>
+									<a href="https://twitter.com/musuka_taisa_dadada" class="member-twitter member-link"
+										target="_blank">
+										<img src="./assets/images/logos/twitter_blue.svg" alt="twitter logo">
+									</a>
+									<a href="httos://youtube.com/muskksudmsukdamdadad"
+										class="member-youtube member-link" target="_blank">
+										<img src="./assets/images/logos/youtube.png" alt="youtube logo">
+									</a>
+									<a href="httos://twitch.tv/musukadmsukdamdadad" class="member-twitch member-link"
+										target="_blank">
+										<img src="./assets/images/logos/twitch.svg" alt="twitch logo">
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<h1 class="game-title">MINECRAFT</h1>
+							<ul class="member-list" id="fortnite-member-list">
+								<li>めんばー</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
 			</section>
 		</div>
+
+		<style>
+			.title-list {
+				list-style: none;
+				padding-left: 0;
+			}
+
+			.game-title {
+				padding: 16px;
+				width: 88%;
+				margin: 0 auto 24px auto;
+				background-color: white;
+				border: 6px solid #dae7eb;
+				color: black;
+				text-align: left;
+				font-weight: 900;
+				transition: .4s ease-out;
+			}
+
+			.game-title:hover {
+				background-color: #bff4ff;
+				border: 6px solid #89cedb;
+			}
+
+			.member-list {
+				display: flex;
+				height: 0;
+				list-style: none;
+				width: 84%;
+				margin: 0 auto;
+				background-color: #101010;
+				padding: 16px;
+				position: relative;
+				top: -24px;
+				border: #090909 5px solid;
+				transform-origin: top;
+				transform: rotateX(90deg);
+				transition: .5s ease-in;
+			}
+
+			.game-title:hover +.member-list, .member-list:hover {
+				display: block;
+				height: 100%;
+				transform: rotateX(0deg);
+				animation: dropDown .5s ease-out;
+				transition: 0s;
+			}
+
+			@keyframes dropDown {
+				0% {
+					transform: rotateX(90deg);
+				}
+
+				100% {
+					transform: rotateX(0deg);
+				}
+			}
+
+			.member-list li {
+				display: flexbox;
+				align-items: center;
+				margin: 16px auto;
+				width: 100%;
+			}
+
+			.member-list li::before {
+				content: "";
+				display: block;
+				width: 100%;
+				border: 1px solid #dae7eb;
+				margin-bottom: 16px;
+			}
+
+			.member-icon {
+				width: 64px;
+				height: 64px;
+				border-radius: 50%;
+			}
+
+			.member-name {
+				margin: 0 16px;
+				font-size: 24px;
+				font-weight: 900;
+			}
+
+			.member-link {
+				margin: 0 0 0 16px;
+				width: 48px;
+				height: 48px;
+				text-decoration: none;
+			}
+
+			.member-link img {
+				width: 48px;
+			}
+
+			.member-twitch img {
+				width: 38px;
+				transform: translateY(5px);
+			}
+		</style>
 
 		<div class="container">
 			<section class="empty-section"></section>
@@ -284,7 +444,7 @@
 
 	<a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)" id="twitter">
 		<div>
-			<img src="./assets/images/logos/twitter.svg" alt="twitter logo">
+			<img src="./assets/images/logos/twitter_white.svg" alt="twitter logo">
 		</div>
 	</a>
 
