--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<div class="section-content">
 					<ul class="title-list">
 						<li>
-							<button class="game-title">FORTNITE</button>
+							<a class="game-title">FORTNITE</a>
 							<ul class="member-list" id="fortnite-member-list">
 								<li>
 									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
@@ -276,7 +276,7 @@
 							</ul>
 						</li>
 						<li>
-							<button class="game-title">APEX</button>
+							<a class="game-title">APEX</a>
 							<ul class="member-list" id="fortnite-member-list">
 								<li>
 									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
@@ -311,7 +311,7 @@
 							</ul>
 						</li>
 						<li>
-							<button class="game-title">MINECRAFT</button>
+							<a class="game-title">MINECRAFT</a>
 							<ul class="member-list" id="fortnite-member-list">
 								<li>
 									<img src="https://cdn.discordapp.com/attachments/725243847793180773/1027382164964261898/2ab5893ddd90b05f.png"
