--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 				text-align: left;
 				font-size: 28px;
 				font-weight: 900;
-				/* transition: .4s ease-out; */
+				transition: .4s ease-out;
 			}
 
 			.game-title:hover {
